Added Raffle Prize winners

--- a/prizes.html
+++ b/prizes.html
@@ -803,84 +803,104 @@
                         <div class="table-responsive">
               						<table class="table">
                             <thead>
-              								<th>Place</th>
-              								<th>Prize</th>
+                              <th>Place</th>
+                              <th>Contestant</th>
+                              <th>Prize</th>
               							</thead>
               							<tbody>
                               <tr>
                                 <th>1</th>
+                                <td>Al Govlet</td>
                                 <td>2019 Polaris Sportsman 450 ATV</td>
                               </tr>
                               <tr>
                                 <th>2</th>
-                                <td>$500 Scheels Gift Card</td>
+                                <td>Elena Crownover</td>
+                                <td>$500 Scheels Gift Card</td>                               
                               </tr>
                               <tr>
                                 <th>3</th>
-                                <td>$500 Scheels Gift Card</td>
+                                <td>Derek LaRock</td>
+                                <td>$500 Scheels Gift Card</td>                               
                               </tr>
                               <tr>
-                                <th>4</th>
+                                <th>4</th>                             
+                                <td>Keith Minion</td>
                                 <td>$500 Scheels Gift Card</td>
                               </tr>
                               <tr>
                                 <th>5</th>
-                                <td>$500 Scheels Gift Card</td>
+                                <td>Ryan Van Blarizon</td>
+                                <td>$500 Scheels Gift Card</td>                              
                               </tr>
                               <tr>
                                 <th>6</th>
-                                <td>Monster Energy Mini Fridge</td>
+                                <td>Brian Lanners</td>
+                                <td>Monster Energy Mini Fridge</td>                               
                               </tr>
                               <tr>
                                 <th>7</th>
-                                <td>Monster Energy Fishing Raft</td>
+                                <td>Todd Nutter</td>
+                                <td>Monster Energy Fishing Raft</td>                                
                               </tr>
                               <tr>
                                 <th>8</th>
-                                <td>1-night Stay at Ho-Chunk Gaming Black River Falls Hotel</td>
+                                <td>Mark and Nancy Baenen</td>
+                                <td>1-night Stay at Ho-Chunk Gaming Black River Falls Hotel</td>                                
                               </tr>
                               <tr>
                                 <th>9</th>
-                                <td>1-night Stay at Mole Lake Casino</td>
+                                <td>Travis Bushay</td>
+                                <td>1-night Stay at Mole Lake Casino</td>                                
                               </tr>
                               <tr>
                                 <th>10</th>
-                                <td>$100 Steak Package from Blugold Dining</td>
+                                <td>Nick Miazga</td>
+                                <td>$100 Steak Package from Blugold Dining</td>                               
                               </tr>
                               <tr>
                                 <th>11</th>
-                                <td>$100 Steak Package from Blugold Dining</td>
+                                <td>Mike Zemmer</td>
+                                <td>$100 Steak Package from Blugold Dining</td>                                
                               </tr>
                               <tr>
                                 <th>12</th>
-                                <td>1-night Stay at Lake of the Torches Resort Casino</td>
+                                <td>Linda Leonard</td>
+                                <td>1-night Stay at Lake of the Torches Resort Casino</td>                               
                               </tr>
                               <tr>
                                 <th>13</th>
-                                <td>Green Bay Packer Prize Package</td>
+                                <td>Craig Knudtson</td>
+                                <td>Green Bay Packer Prize Package</td>                               
                               </tr>
                               <tr>
                                 <th>14</th>
-                                <td>Visit EC/The Local Store basket + The View GC</td>
+                                <td>Garry Running</td>
+                                <td>Visit EC/The Local Store basket + The View GC</td>                                
                               </tr>
                               <tr>
                                 <th>15</th>
-                                <td>Monster Energy Backpack and Apparel</td>
+                                <td>Mark Bollinger</td>
+                                <td>Monster Energy Backpack and Apparel</td>                                
                               </tr>
                               <tr>
                                 <th>16</th>
-                                <td>EC Express tickets + The View Pizza Party</td>
+                                <td>Ryan Ehlke</td>
+                                <td>EC Express tickets + The View Pizza Party</td>                               
                               </tr>
                               <tr>
-                                <th>17</th>
+                                <th>17</th>                               
+                                <td>Ben Leurquin</td>
                                 <td>$25 The Edge + Apparel</td>
                               </tr>
                               <tr>
                                 <th>18</th>
-                                <td>Leinenkugel Paddle + $25 The Edge + The View Pizza Party</td>
+                                <td>Paige Kaiser</td>
+                                <td>Leinenkugel Paddle + $25 The Edge + The View Pizza Party</td>                              
                               </tr>
                               <tr>
                                 <th>19</th>
+                                <td>Beck Ruzzha</td>
                                 <td>Chair + $25 The Edge + The View Pizza Party</td>
                               </tr>
                             </tbody>
