Added names for winners

--- a/prizes.html
+++ b/prizes.html
@@ -170,7 +170,7 @@
                     <div class="row mb-4">
                       <div class="col-sm-12">
                         <h2 class="brand-blue">2020 Ford F150 Winner</h2>
-                        <h3></h3>
+                        <h3>Joe David</h3>
                       </div>
                       <div class="col-sm-12">
                         <h2 class="brand-blue">2020 Fish Prize Winners</h2>
@@ -755,11 +755,9 @@
                         <div class="table-responsive">
                           <table class="table">
                             <thead>
-                              <tr>
-                                <th>Contestant</th>
-                                <th>Weight</th>
-                                <th>Species</th>
-                              </tr>
+                              <th>Contestant</th>
+                              <th>Weight</th>
+                              <th>Species</th>
                             </thead>
                             <tbody>
                               <tr>
@@ -788,7 +786,12 @@
                         <div class="table-responsive">
               						<table class="table">
               							<tbody>
+                              <thead>
+                                <th>Contestant</th>
+                                <th>Prize</th>
+                              </thead>
                               <tr>
+                                <td>Thomas Evenson</td>
                   							<td>Eskimo Stingray 33cc</td>
                   						</tr>
                             </tbody>
@@ -799,12 +802,11 @@
                     <div class="row mb-2">
               				<div class="col-sm-12">
                         <h2 class="brand-blue">2020 Raffle Prize Winners</h2>
-                        <h6>Visit: <a href="https://e-clubhouse.org/sites/lakewissota/page-10.php" target="blank">Lake Wissota Lion's Club Website</a></h6>
                         <div class="table-responsive">
               						<table class="table">
                             <thead>
                               <th>Place</th>
-                              <th>Contestant</th>
+                              <th>Name of Winner</th>
                               <th>Prize</th>
               							</thead>
               							<tbody>
@@ -907,10 +909,16 @@
                           </table>
                         </div>
                       </div>
+                    </div>
+                    <div class="row mb-2">
+              				<div class="col-sm-12">
+                        <h2 class="brand-blue">2020 Lion's Club Gun Raffle Winners</h2>
+                        <h6>Visit: <a href="https://e-clubhouse.org/sites/lakewissota/page-10.php" target="blank">Lake Wissota Lion's Club Website</a></h6>
+                      </div>
                     </div>                   
                   </div>
                 </div>
-              </div>
+              </div> 
               <div class="card">
                 <div class="card-header" id="headingOne">
                   <h5 class="mb-0">
