Changed name of winner to contestant

--- a/prizes.html
+++ b/prizes.html
@@ -806,7 +806,7 @@
               						<table class="table">
                             <thead>
                               <th>Place</th>
-                              <th>Name of Winner</th>
+                              <th>Contestant</th>
                               <th>Prize</th>
               							</thead>
               							<tbody>
