--- a/schedule.html
+++ b/schedule.html
@@ -144,12 +144,7 @@
               <tr>
                 <th scope="row">The View</th>
                 <td>3:00PM</td>
-                <td>Raffle Prize drawing, tickets available for purchase until drawing begins</td>
-              </tr>
-              <tr>
-                <th scope="row">The View</th>
-                <td>4:00PM</td>
-                <td>Fish contest winners announced and prizes distributed</td>
+                <td>Raffle Prize drawing, tickets available for purchase until drawing begins, Fish contest winners announced after.</td>
               </tr>
               <tr>
                 <th scope="row">The View</th>
