Fixed Raffle Winners names

--- a/prizes.html
+++ b/prizes.html
@@ -832,7 +832,7 @@
                               </tr>
                               <tr>
                                 <th>5</th>
-                                <td>Ryan Van Blarizon</td>
+                                <td>Ryan Van Blaricom</td>
                                 <td>$500 Scheels Gift Card</td>                              
                               </tr>
                               <tr>
@@ -902,7 +902,7 @@
                               </tr>
                               <tr>
                                 <th>19</th>
-                                <td>Beck Ruzzha</td>
+                                <td>Beck Ruzicka</td>
                                 <td>Chair + $25 The Edge + The View Pizza Party</td>
                               </tr>
                             </tbody>
