--- a/prizes.html
+++ b/prizes.html
@@ -812,7 +812,7 @@
               							<tbody>
                               <tr>
                                 <th>1</th>
-                                <td>Al Govlet</td>
+                                <td>Al Goulet</td>
                                 <td>2019 Polaris Sportsman 450 ATV</td>
                               </tr>
                               <tr>
