--- a/prizes.html
+++ b/prizes.html
@@ -124,22 +124,24 @@
       <div class="col-md-12">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
+
             <div class="carousel-item active">
               <img class="d-block img-fluid" src="./images/prizes/prizes2020.jpg" alt="First slide">
             </div>
 
-            <!--
+            
             <div class="carousel-item">
-              <img class="d-block img-fluid" src="./images/prizes/TruckPrize2020.jpg" alt="Second slide">
+              <img class="d-block img-fluid" src="./images/prizes/crop_prize.png" alt="Second slide">
             </div>
-            <div class="carousel-item">
-              <img class="d-block img-fluid" src="./images/prizes/BigPrizes2020.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block img-fluid" src="./images/prizes/SmallPrizes2020.jpg" alt="Fourth slide">
-            </div>
+
+            <!-- <div class="carousel-item"> -->
+              <!-- <img class="d-block img-fluid" src="./images/prizes/BigPrizes2020.jpg" alt="Third slide"> -->
+            <!-- </div> -->
+            <!-- <div class="carousel-item"> -->
+              <!-- <img class="d-block img-fluid" src="./images/prizes/SmallPrizes2020.jpg" alt="Fourth slide"> -->
+            <!-- </div> -->
           </div>
-          -->
+          
           <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
