Changed nav bar

--- a/prizes.html
+++ b/prizes.html
@@ -62,7 +62,7 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Event</a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item brand-blue" href="liveResults.html">Live Results</a>
+              <a class="dropdown-item brand-blue" href="liveResults.html">Live Feed</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item brand-blue" href="directions.html">Directions</a>
               <div class="dropdown-divider"></div>
