--- a/liveResults.html
+++ b/liveResults.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/brand.css">
 
-  <title>Jig's Up | Live Results</title>
+  <title>Jig's Up | Live Feed</title>
 
   <link rel="apple-touch-icon" sizes="57x57" href="../favicon/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="../favicon/apple-icon-60x60.png">
@@ -60,7 +60,7 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Event</a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item brand-blue" href="liveResults.html">Live Results</a>
+                <a class="dropdown-item brand-blue" href="liveResults.html">Live Feed</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item brand-blue" href="directions.html">Directions</a>
                 <div class="dropdown-divider"></div>
