--- a/wifa.html
+++ b/wifa.html
@@ -66,7 +66,7 @@
 					<li class="dropdown">
 						<a class="dropdown-toggle navcol" data-toggle="dropdown" href="#">Event<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="liveResults.html">Live Results</a></li>
+							<li><a href="liveResults.html">Live Feed</a></li>
 							<li role="presentation" class="divider"></li>
 							<li><a href="directions.html">Directions</a></li>
 							<li role="presentation" class="divider"></li>
