--- a/prizes.html
+++ b/prizes.html
@@ -130,9 +130,9 @@
             </div>
 
             
-            <div class="carousel-item">
-              <img class="d-block img-fluid" src="./images/prizes/crop_prize.png" alt="Second slide">
-            </div>
+            <!-- <div class="carousel-item"> -->
+              <!-- <img class="d-block img-fluid" src="./images/prizes/crop_prize.png" alt="Second slide"> -->
+            <!-- </div> -->
 
             <!-- <div class="carousel-item"> -->
               <!-- <img class="d-block img-fluid" src="./images/prizes/BigPrizes2020.jpg" alt="Third slide"> -->
