Revert "Did updates"
This reverts commit 03907c616d2fc6d0751ece0c47cb71fcf6db361c.

--- a/tickets.html
+++ b/tickets.html
@@ -127,7 +127,7 @@
 			<div class="col-12 mx-2">
 				<p><h5 class="d-inline brand-blue">Fish Ticket Availability:</h5> Tickets will be available online until 10:00pm on Friday, February 7th. Fish Tickets will be available on February 8th, 2020 at the weigh-in stations and The View until 9am for $40.</p>
 				<ul class="bulletless-grey py-1 pr-2">
-					<li><class="my-0">Fish Tickets purchased online will be mailed through January 31st to the address indicated. After January 31st, tickets will be available for pick-up at the weigh-in station at The View and must be picked up by 2pm. NOTE: You do not need to pick up your Fish Tickets until you are ready to weigh in a fish.</h5></li>
+					<li><class="my-0">Fish Tickets purchased online will be mailed through January 31st to the address indicated. After January 31st, tickets will be available for pick-up at the weigh-in station at The View. NOTE: You do not need to pick up your Fish Tickets until you are ready to weigh in a fish.</h5></li>
 				</ul>
 			</div>
 		</div>
@@ -137,6 +137,8 @@
 				<p><h5 class="d-inline brand-blue">Raffle Tickets:</h5> $5 each or 5 for $20</p>
 				<ul class="bulletless-grey py-1 pr-2">
 					<li><class="my-0">$7,500 in prizes includes a 2019 Polaris Sportsman 450 4-wheeler! Tickets can be purchased up until the drawing on Saturday, February 8th at the weigh-in stations and The View.</h5></li>
+					<li><br/></li>
+					<li><class="my-0">Claim tickets will be mailed through January 31st to the address indicated. After January 31st, claim tickets will be available for pick-up at the weigh-in station at The View. NOTE: Raffle drawing begins at 3:00pm at The View. Please pick up claim tickets by 2:00pm. Need not be present to win.</h5></li>
 				</ul>
 			</div>
 		</div>
