--- a/tickets.html
+++ b/tickets.html
@@ -127,7 +127,19 @@
 			<div class="col-12 mx-2">
 				<p><h5 class="d-inline brand-blue">Fish Ticket Availability:</h5> Tickets will be available online until 10:00pm on Friday, February 7th. Fish Tickets will be available on February 8th, 2020 at the weigh-in stations and The View until 9am for $40.</p>
 				<ul class="bulletless-grey py-1 pr-2">
-					<li><class="my-0">Fish Tickets purchased online will be mailed through January 31st to the address indicated. After January 31st, tickets will be available for pick-up at the weigh-in station at The View. NOTE: You do not need to pick up your Fish Tickets until you are ready to weigh in a fish.</h5></li>
+					<li><class="my-0">Fish Tickets purchased online will be mailed through January 31st to the address indicated. After January 31st, tickets will be available for pick-up at the weigh-in station at The View. Tickets must be picked up at the Weigh-In Station at The View by 2pm. NOTE: You do not need to pick up your Fish Tickets until you are ready to weigh in a fish.</h5></li>
+				</ul>
+			</div>
+		</div>
+
+
+    <div class="row">
+			<div class="col-12 mx-2">
+				<p><h5 class="d-inline brand-blue">"The One That Got Away":</h5>
+				<ul class="bulletless-grey py-1 pr-2">
+					<li><class="my-0">“The One That Got Away”
+            Prize drawing from all Fish Ticket holders that did not register a fish. Turn in your Fish Ticket Stub at the Prize Table in The View by 2:30pm.
+            </h5></li>
 				</ul>
 			</div>
 		</div>
