Update dates and sponsors

--- a/liveResults.html
+++ b/liveResults.html
@@ -68,9 +68,9 @@
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item brand-blue" href="lodging.html" >Lodging</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item brand-blue" href="assets/2020_Rules_of_the_Tournament.pdf">Rules</a>
+                <a class="dropdown-item brand-blue" target="_blank" href="assets/2020_Rules_of_the_Tournament.pdf">Rules</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item brand-blue" href="assets/WIFA_details.pdf">WIFA Tournament</a>
+                <a class="dropdown-item brand-blue" target="_blank" href="assets/WIFA_details.pdf">WIFA Tournament</a>
               </div>
             </li>
             <li class="nav-item">
@@ -111,7 +111,7 @@
       <div class="row">
         <div class="col-12 pb-4">
           <h2 class="brand-blue">Live Results</h2>
-          <!--<h5>Join us on February 8th on this page for live results.</h5>-->
+          <h5>Join us on February 6th on this page for live results.</h5>
         </div>
       </div>
       <!--<div class="row">
@@ -144,11 +144,11 @@
           <img src="./images/sponsors/ford.png" class="img-fluid" alt="Ford">
         </a>
       </div>
-      <div class="col-lg-3 text-center my-auto mx-auto">
+      <!--<div class="col-lg-3 text-center my-auto mx-auto">
         <a href="http://www.subway.com/subwayroot/default.aspx" class="title-sponsor">
           <img src="./images/sponsors/Subway.png" class="img-fluid" alt="Subway">
         </a>
-      </div>
+      </div>-->
       <div class="col-lg-3 text-center my-auto mx-auto">
         <a href="http://www.airforce.com" class="title-sponsor">
           <img src="./images/sponsors/airforce.png" class="img-fluid" alt="United States Air Force">
