--- a/tickets.html
+++ b/tickets.html
@@ -59,9 +59,9 @@
               <div class="dropdown-divider"></div>
               <a class="dropdown-item brand-blue" href="lodging.html" >Lodging</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item brand-blue" href="assets/2020_Rules_of_the_Tournament.pdf">Rules</a>
+              <a class="dropdown-item brand-blue" target="_blank" href="assets/2020_Rules_of_the_Tournament.pdf">Rules</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item brand-blue" href="assets/WIFA_details.pdf">WIFA Tournament</a>
+              <a class="dropdown-item brand-blue" target="_blank" href="assets/WIFA_details.pdf">WIFA Tournament</a>
             </div>
           </li>
           <li class="nav-item">
@@ -109,13 +109,13 @@
 			<div class="col-12 mx-2">
 				<p><h5 class="d-inline brand-blue">Fish Tickets:</h5> $25, one ticket required for each fish registered, multiple tickets may be purchased</p>
 				<ul class="bulletless-grey py-1 pr-2">
-					<li><h5 class="my-0">Over $80,000 in cash and prizes including a 2-year lease on a 2020 <b>Ford F150 Truck!</b></h5></li>
+					<li><h5 class="my-0">Over $80,000 in cash and prizes including a 2-year lease on a 2021 <b>Ford F150 Truck!</b></h5></li>
 				</ul>
 			</div>
 			<div class="col-12">
 				<ul class="px-6">
 					<li>Prizes awarded to the top 25 fish and every 5th place thereafter by weight to the 300th place so even a small fish can win big!</li>
-					<li>The winner of the 2-year lease from Eau Claire Ford for the 2020 Ford F-150 will be drawn at random from the tickets stubs of all registered fish.</li>
+					<li>The winner of the 2-year lease from Eau Claire Ford for the 2021 Ford F-150 will be drawn at random from the tickets stubs of all registered fish.</li>
 					<li>Everyone who registers a fish may request two free Blugold Football Tickets at the weigh-in stations (value $16).</li>
 					<li>$100 gift cards will be given to the top fish by species: Northern, Walleye and Pan Fish.</li>
 					<li>“The One that Got Away” drawing from all Fish Ticket holders that did not register a fish. Turn in Fish Ticket stub at the Prize Table at The View by 2:30pm.</li>
@@ -125,7 +125,7 @@
 
 		<div class="row">
 			<div class="col-12 mx-2">
-				<p><h5 class="d-inline brand-blue">Fish Ticket Availability:</h5> Tickets will be available online until 10:00pm on Friday, February 7th. Fish Tickets will be available on February 8th, 2020 at the weigh-in stations and The View until 9am for $40.</p>
+				<p><h5 class="d-inline brand-blue">Fish Ticket Availability:</h5> Tickets will be available online until 10:00pm on Friday, February 5th. Fish Tickets will be available on February 6th, 2020 at the weigh-in stations and The View until 9am for $40.</p>
 				<ul class="bulletless-grey py-1 pr-2">
 					<li><class="my-0">Fish Tickets purchased online will be mailed through January 31st to the address indicated. After January 31st, tickets will be available for pick-up at the weigh-in station at The View. Tickets must be picked up at the Weigh-In Station at The View by 2pm. NOTE: You do not need to pick up your Fish Tickets until you are ready to weigh in a fish.</h5></li>
 				</ul>
@@ -148,7 +148,7 @@
 			<div class="col-12 mx-2">
 				<p><h5 class="d-inline brand-blue">Raffle Tickets:</h5> $5 each or 5 for $20</p>
 				<ul class="bulletless-grey py-1 pr-2">
-					<li><class="my-0">$7,500 in prizes includes a 2019 Polaris Sportsman 450 4-wheeler! Tickets can be purchased up until the drawing on Saturday, February 8th at the weigh-in stations and The View.</h5></li>
+					<li><class="my-0">$7,500 in prizes includes a 2020 Polaris Sportsman 450 4-wheeler! Tickets can be purchased up until the drawing on Saturday, February 6th at the weigh-in stations and The View.</h5></li>
 					<li><br/></li>
 					<li><class="my-0">Claim tickets will be mailed through January 31st to the address indicated. After January 31st, claim tickets will be available for pick-up at the weigh-in station at The View. NOTE: Raffle drawing begins at 3:00pm at The View. Please pick up claim tickets by 2:00pm. Need not be present to win.</h5></li>
 				</ul>
@@ -188,11 +188,11 @@
           <img src="./images/sponsors/ford.png" class="img-fluid" alt="Ford">
         </a>
       </div>
-      <div class="col-lg-3 text-center my-auto mx-auto">
+      <!-- <div class="col-lg-3 text-center my-auto mx-auto">
         <a href="http://www.subway.com/subwayroot/default.aspx" class="title-sponsor">
           <img src="./images/sponsors/Subway.png" class="img-fluid" alt="Subway">
         </a>
-      </div>
+      </div> -->
       <div class="col-lg-3 text-center my-auto mx-auto">
         <a href="http://www.airforce.com" class="title-sponsor">
           <img src="./images/sponsors/airforce.png" class="img-fluid" alt="United States Air Force">
