--- a/directions.html
+++ b/directions.html
@@ -68,9 +68,9 @@
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item brand-blue" href="lodging.html" >Lodging</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item brand-blue" href="assets/2020_Rules_of_the_Tournament.pdf">Rules</a>
+                <a class="dropdown-item brand-blue" target="_blank" href="assets/2020_Rules_of_the_Tournament.pdf">Rules</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item brand-blue" href="assets/WIFA_details.pdf">WIFA Tournament</a>
+                <a class="dropdown-item brand-blue" target="_blank" href="assets/WIFA_details.pdf">WIFA Tournament</a>
               </div>
             </li>
             <li class="nav-item">
@@ -179,11 +179,11 @@
           <img src="./images/sponsors/ford.png" class="img-fluid" alt="Ford">
         </a>
       </div>
-      <div class="col-lg-3 text-center my-auto mx-auto">
+      <!-- <div class="col-lg-3 text-center my-auto mx-auto">
         <a href="http://www.subway.com/subwayroot/default.aspx" class="title-sponsor">
           <img src="./images/sponsors/Subway.png" class="img-fluid" alt="Subway">
         </a>
-      </div>
+      </div> -->
       <div class="col-lg-3 text-center my-auto mx-auto">
         <a href="http://www.airforce.com" class="title-sponsor">
           <img src="./images/sponsors/airforce.png" class="img-fluid" alt="United States Air Force">
