--- a/tickets.html
+++ b/tickets.html
@@ -249,11 +249,11 @@
           <img src="./images/sponsors/xtreme1.png" class="img-fluid" alt="Xtreme">
         </a>
       </div>
-      <div class="col-lg col-6 text-center my-auto">
+      <!-- <div class="col-lg col-6 text-center my-auto">
         <a href="http://www.leinie.com/" class="sponsor">
           <img src="./images/sponsors/lein.png" class="img-fluid" alt="Leinenkugels">
         </a>
-      </div>
+      </div> -->
       <div class="col-lg col-6 text-center my-auto">
         <a href="https://www.aceautomall.com/" class="sponsor">
           <img src="./images/sponsors/AceAutoMall.png" class="img-fluid" alt="Ace Auto Mall">
