--- a/directions.html
+++ b/directions.html
@@ -185,7 +185,7 @@
         </a>
       </div> -->
       <div class="col-lg-3 text-center my-auto mx-auto">
-        <a href="http://www.airforce.com" class="title-sponsor">
+        <a href="https://www.airforce.com/careers/indemand-careers/special-warfare" class="title-sponsor">
           <img src="./images/sponsors/airforce.png" class="img-fluid" alt="United States Air Force">
         </a>
       </div>
