--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         </a>
       </div>-->
       <div class="col my-auto">
-        <a href="https://www.airforce.com/" target="_blank">
+        <a href="https://www.airforce.com/careers/indemand-careers/special-warfare" target="_blank">
           <img class="img-fluid" src="./images/sponsors/airforce.png" alt="United States Air Force">
         </a>
       </div>
@@ -286,7 +286,7 @@
         </a>
       </div>-->
       <div class="col-lg-3 text-center my-auto mx-auto">
-        <a href="http://www.airforce.com" class="title-sponsor">
+        <a href="https://www.airforce.com/careers/indemand-careers/special-warfare" class="title-sponsor">
           <img src="./images/sponsors/airforce.png" class="img-fluid" alt="United States Air Force">
         </a>
       </div>
