--- a/sponsors.html
+++ b/sponsors.html
@@ -130,7 +130,7 @@
             </a>
           </div>-->
           <div class="col-md-3 text-center my-auto mx-auto">
-            <a href="https://www.airforce.com/" class="title-sponsors">
+            <a href="https://www.airforce.com/careers/indemand-careers/special-warfare" class="title-sponsors">
               <img src="./images/sponsors/airforce.png" class="img-fluid" alt="United States Air Force">
             </a>
           </div>
