--- a/index.html
+++ b/index.html
@@ -200,7 +200,8 @@
               <li>The View on Lake Wissota</li>
               <li class="mb-3">The Edge Pub & Eatery</li>
               <li><h5><b>Prize Distribution</b></h5></li>
-              <li>The View on Lake Wissota starting at 3pm</li>
+              <li>Feb. 6th, place TBD.</li>
+              <!-- <li>The View on Lake Wissota starting at 3pm</li> -->
             </ul>
           </div>
         </div>
@@ -210,9 +211,9 @@
           </div>
           <div class="col-12 p-0">
             <ul class="bulletless-grey">
-              <li class="mb-2">Over $80,000 in cash and prizes including a 2-year lease on a <b>2021 Ford F150 Truck</b> drawn from all registered Fish Tickets! Prizes awarded to the top 25 fish and every 5th place thereafter by weight to 300th place so even a small fish can win big! </li>
+              <li class="mb-2">Over $80,000 in cash and prizes including a 2-year lease on a <b>2021 Ford F150 XLT Super Crew Truck</b> drawn from all registered Fish Tickets! Prizes awarded to the top 20 fish and every 10th place thereafter by weight to 480th place, then every place thereafter to 500th, so even a small fish can win big! </li>
               <li class="mb-2"><b>Each participant may register one fish per ticket;</b> tickets are $25 with no limit on the number of tickets an individual can purchase. Everyone who registers a fish may request two free Blugold Football Tickets at the weigh-in stations (value $16). </li>
-              <li class="mb-2">Raffle prizes include a <b>2020 Polaris Sportsman 450 4-wheeler</b>, raffle tickets are $5 each or 5 for $20! $100 Gift card prizes for the top fish by weight in each category: northern, walleye, and pan fish. "The One that Got Away" drawing from all Fish Ticket holders that did not register a fish, turn in Fish Ticket stub at the Prize Table at The View by 2:30pm.</li>
+              <li class="mb-2">Raffle prizes include a <b>2020 Polaris Sportsman 570 4-wheeler</b>, raffle tickets are $5 each or 5 for $20! $100 Gift card prizes for the top fish by weight in each category: northern, walleye, and pan fish. "The One that Got Away" drawing from all Fish Ticket holders that did not register a fish, turn in Fish Ticket stub at the Prize Table at TBD by TBD.<!--The View by 2:30pm.--></li>
             </ul>
           </div>
         </div>
@@ -314,11 +315,12 @@
       </div>
     </div>
     <div class="row mx-6">
+      <!--
       <div class="col-lg col-6 text-center my-auto">
         <a href="http://www.uwec.edu/dining/" class="sponsor">
           <img src="./images/sponsors/dining2020.png" class="img-fluid" alt="Dining">
         </a>
-      </div>
+      </div>-->
       <div class="col-lg col-6 text-center my-auto">
         <a href="http://www.theedgepubandeatery.com/" class="sponsor">
           <img src="./images/sponsors/edge.png" class="img-fluid" alt="The Edge">
@@ -346,11 +348,11 @@
           <img src="./images/sponsors/lein.png" class="img-fluid" alt="Leinenkugels">
         </a>
       </div> -->
-      <div class="col-lg col-6 text-center my-auto">
+      <!--<div class="col-lg col-6 text-center my-auto">
         <a href="https://www.aceautomall.com/" class="sponsor">
           <img src="./images/sponsors/AceAutoMall.png" class="img-fluid" alt="Ace Auto Mall">
         </a>
-      </div>
+      </div>-->
       <div class="col-lg col-6 text-center my-auto">
         <a href="http://www.lakewissotasandbar.com/" class="sponsor">
           <img src="./images/sponsors/thesandbar.png" class="img-fluid" alt="The SandBar">
