--- a/lodging.html
+++ b/lodging.html
@@ -187,11 +187,11 @@
       </div>
     </div>
     <div class="row mx-6">
-      <div class="col-lg col-6 text-center my-auto">
+      <!--<div class="col-lg col-6 text-center my-auto">
         <a href="http://www.uwec.edu/dining/" class="sponsor">
           <img src="./images/sponsors/dining2020.png" class="img-fluid" alt="Dining">
         </a>
-      </div>
+      </div>-->
       <div class="col-lg col-6 text-center my-auto">
         <a href="http://www.theedgepubandeatery.com/" class="sponsor">
           <img src="./images/sponsors/edge.png" class="img-fluid" alt="The Edge">
@@ -219,11 +219,11 @@
           <img src="./images/sponsors/lein.png" class="img-fluid" alt="Leinenkugels">
         </a>
       </div> -->
-      <div class="col-lg col-6 text-center my-auto">
+      <!--<div class="col-lg col-6 text-center my-auto">
         <a href="https://www.aceautomall.com/" class="sponsor">
           <img src="./images/sponsors/AceAutoMall.png" class="img-fluid" alt="Ace Auto Mall">
         </a>
-      </div>
+      </div>-->
       <div class="col-lg col-6 text-center my-auto">
         <a href="http://www.lakewissotasandbar.com/" class="sponsor">
           <img src="./images/sponsors/thesandbar.png" class="img-fluid" alt="The SandBar">
