--- a/sponsors.html
+++ b/sponsors.html
@@ -163,11 +163,11 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-4 col-md text-center my-auto">
+          <!--<div class="col-4 col-md text-center my-auto">
             <a href="http://www.uwec.edu/dining/" class="sponsors">
               <img src="./images/sponsors/dining2020.png" class="img-fluid" alt="Dining">
             </a>
-          </div>
+          </div>-->
           <div class="col-4 col-md text-center my-auto">
             <a href="http://www.theedgepubandeatery.com/" class="sponsors">
               <img src="./images/sponsors/edge.png" class="img-fluid" alt="The Edge">
@@ -195,11 +195,11 @@
           <img src="./images/sponsors/lein.png" class="img-fluid" alt="Leinenkugels">
         </a>
       </div> -->
-          <div class="col-4 col-md text-center my-auto">
+          <!--<div class="col-4 col-md text-center my-auto">
             <a href="https://www.aceautomall.com/" class="sponsors">
               <img src="./images/sponsors/AceAutoMall.png" class="img-fluid" alt="Ace Auto Mall">
             </a>
-          </div>
+          </div>-->
           <div class="col-4 col-md text-center my-auto">
             <a href="http://www.lakewissotasandbar.com/" class="sponsors">
               <img src="./images/sponsors/thesandbar.png" class="img-fluid" alt="The SandBar">
