--- a/tickets.html
+++ b/tickets.html
@@ -114,11 +114,11 @@
 			</div>
 			<div class="col-12">
 				<ul class="px-6">
-					<li>Prizes awarded to the top 20 fish and every 10th place thereafter by weight to 480th place, then every place thereafter to 500th, so even a small fish can win big!</li>
+					<li>Prizes awarded by weight to the top 20 fish and every 10th place thereafter to 480th place, then 481-500, so even a small fish can win big!</li>
 					<li>The winner of the 2-year lease from Eau Claire Ford for the 2021 Ford F-150 XLT Super Crew will be drawn at random from the tickets stubs of all registered fish.</li>
 					<li>Everyone who registers a fish may request two free Blugold Football Tickets at the weigh-in stations (value $16).</li>
 					<li>$100 gift cards will be given to the top fish by species: Northern, Walleye and Pan Fish.</li>
-					<li>“The One that Got Away” drawing from all Fish Ticket holders that did not register a fish. Turn in Fish Ticket stub at the Prize Table at TBD<!--The View--> by TBD.<!--2:30pm.--></li>
+					<li>“The One that Got Away” drawing from all Fish Ticket holders that did not register a fish. Turn in Fish Ticket stub at the Prize Table at The View-by 2:30pm.</li>
 				</ul>
       </div>
     </div>
@@ -138,7 +138,7 @@
 				<p><h5 class="d-inline brand-blue">"The One That Got Away":</h5>
 				<ul class="bulletless-grey py-1 pr-2">
 					<li><class="my-0">“The One That Got Away”
-            Prize drawing from all Fish Ticket holders that did not register a fish. Turn in your Fish Ticket Stub at the Prize Table in TBD by TBD.<!--The View by 2:30pm-->.
+            Prize drawing from all Fish Ticket holders that did not register a fish. Turn in your Fish Ticket Stub at the Prize Table in The View by 2:30pm.
             </h5></li>
 				</ul>
 			</div>
@@ -148,7 +148,7 @@
 			<div class="col-12 mx-2">
 				<p><h5 class="d-inline brand-blue">Raffle Tickets:</h5> $5 each or 5 for $20</p>
 				<ul class="bulletless-grey py-1 pr-2">
-					<li><class="my-0">$7,500 in prizes includes a 2020 Polaris Sportsman 570 4-wheeler! Tickets can be purchased up until the drawing on Saturday, February 6th at TBD.<!--the weigh-in stations and The View.--></h5></li>
+					<li><class="my-0">$7,500 in prizes includes a 2020 Polaris Sportsman 570 4-wheeler! Tickets can be purchased up until the drawing on Saturday, February 6th at the weigh-in stations and The View.</h5></li>
 					<li><br/></li>
 					<li><class="my-0">Claim tickets will be mailed through January 31st to the address indicated. After January 31st, claim tickets will be available for pick-up at the weigh-in station at The View. NOTE: Raffle drawing begins at 3:00pm at The View. Please pick up claim tickets by 2:00pm. Need not be present to win.</h5></li>
 				</ul>
