--- a/schedule.html
+++ b/schedule.html
@@ -124,7 +124,7 @@
               <tr>
                 <th scope="row">Lake Wissota</th>
                 <td>7:00AM</td>
-                <td>Contest Begins! No need to pre-register, just head out to the ice.</td>
+                <td>Contest Begins! Head right out to the ice.</td>
               </tr>
               <tr>
                 <th scope="row">The View & The Edge Weight in Stations</th>
@@ -134,7 +134,7 @@
               <tr>
                 <th scope="row">Lake Wissota</th>
                 <td>12:00PM</td>
-                <td>Kids Klub event on the ice in front of The View (Free lunch for kids), Prize drawings at 1:00PM</td>
+                <td>Kids Klub event on the ice in front of The View, Prize drawings at 1:00PM</td>
               </tr>
               <tr>
                 <th scope="row">The View & The Edge</th>
@@ -143,13 +143,8 @@
               </tr>
               <tr>
                 <th scope="row">The View</th>
-                <td>3:00PM</td>
-                <td>Raffle Prize drawing, tickets available for purchase until drawing begins, Fish contest winners announced after.</td>
-              </tr>
-              <tr>
-                <th scope="row">The View</th>
-                <td>5:00PM</td>
-                <td>Stick around for music and fish stories at the bar</td>
+                <td></td>
+                <td>Raffle Prize drawing, tickets available for purchase until drawing begins, Fish contest winners announced after. Stick around for music and fish stories at the bar</td>
               </tr>
             </tbody>
           </table>
