Reduced size of sandbar logo

--- a/contact.html
+++ b/contact.html
@@ -297,7 +297,7 @@
       </div>-->
       <div class="col-lg col-6 text-center my-auto">
         <a href="http://www.lakewissotasandbar.com/" class="sponsor">
-          <img src="./images/sponsors/thesandbar.png" class="img-fluid" alt="The SandBar">
+          <img style="width: 80px;" src="./images/sponsors/thesandbar.png" class="img-fluid" alt="The SandBar">
         </a>
       </div>
       <!--<div class="col-lg col-6 text-center my-auto">
