--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         </div>
         <div class="row px-3">
           <h3 class="d-inline-block brand-blue"><b>Time:</b></h3>
-          <h5 class="d-block-inline my-auto ml-2">7am-2pm, no pre-registration</h5>
+          <h5 class="d-block-inline my-auto ml-2">7am-2pm</h5>
         </div>
         <div class="row px-3">
           <div class="col-12 pl-0 brand-blue">
@@ -355,7 +355,7 @@
       </div>-->
       <div class="col-lg col-6 text-center my-auto">
         <a href="http://www.lakewissotasandbar.com/" class="sponsor">
-          <img src="./images/sponsors/thesandbar.png" class="img-fluid" alt="The SandBar">
+          <img style="width: 80px;" src="./images/sponsors/thesandbar.png" class="img-fluid" alt="The SandBar">
         </a>
       </div>
       <!--<div class="col-lg col-6 text-center my-auto">
