--- a/schedule.html
+++ b/schedule.html
@@ -127,7 +127,7 @@
                 <td>Contest Begins! Head right out to the ice.</td>
               </tr>
               <tr>
-                <th scope="row">The View & The Edge Weight in Stations</th>
+                <th scope="row">The View & The Edge Weigh-In Stations</th>
                 <td>9:00AM</td>
                 <td>Last Chance to purchase additional Fish Tickets for $40, available 7:00AM-9:00AM</td>
               </tr>
@@ -237,7 +237,7 @@
       </div>-->
       <div class="col-lg col-6 text-center my-auto">
         <a href="http://www.lakewissotasandbar.com/" class="sponsor">
-          <img src="./images/sponsors/thesandbar.png" class="img-fluid" alt="The SandBar">
+          <img style="width: 80px;" src="./images/sponsors/thesandbar.png" class="img-fluid" alt="The SandBar">
         </a>
       </div>
       <!--<div class="col-lg col-6 text-center my-auto">
