--- a/sponsors.html
+++ b/sponsors.html
@@ -202,7 +202,7 @@
           </div>-->
           <div class="col-4 col-md text-center my-auto">
             <a href="http://www.lakewissotasandbar.com/" class="sponsors">
-              <img src="./images/sponsors/thesandbar.png" class="img-fluid" alt="The SandBar">
+              <img style="width: 80px;" src="./images/sponsors/thesandbar.png" class="img-fluid" alt="The SandBar">
             </a>
           </div>
           <!--<div class="col-4 col-md text-center my-auto">
