--- a/tickets.html
+++ b/tickets.html
@@ -150,7 +150,7 @@
 				<ul class="bulletless-grey py-1 pr-2">
 					<li><class="my-0">$7,500 in prizes includes a 2020 Polaris Sportsman 570 4-wheeler! Tickets can be purchased up until the drawing on Saturday, February 6th at the weigh-in stations and The View.</h5></li>
 					<li><br/></li>
-					<li><class="my-0">Claim tickets will be mailed through January 28th to the address indicated. After January 28th, claim tickets will be available for pick-up at the weigh-in station at The View. Pick up claim tickets by 2:00pm. Need not be present to win.</h5></li>
+					<!-- <li><class="my-0">Claim tickets will be mailed through January 28th to the address indicated. After January 28th, claim tickets will be available for pick-up at the weigh-in station at The View. Pick up claim tickets by 2:00pm. Need not be present to win.</h5></li> -->
 				</ul>
 			</div>
 		</div>
