--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
               <li>The View on Lake Wissota</li>
               <li class="mb-3">The Edge Pub & Eatery</li>
               <li><h5><b>Prize Distribution</b></h5></li>
-              <li>Feb. 6th, place TBD.</li>
+              <li>Feb. 6th.</li>
               <!-- <li>The View on Lake Wissota starting at 3pm</li> -->
             </ul>
           </div>
@@ -308,9 +308,21 @@
           <img src="./images/sponsors/megaholiday.png" class="img-fluid" alt="Mega Holiday">
         </a>
       </div>
+    </div>
+    <div class="row mx-6">
       <div class="col-lg-2 col-sm-6 my-auto mx-auto">
         <a href="http://www.prestigervauto.com/" class="sponsor">
           <img src="./images/sponsors/prestige1.png" class="img-fluid" alt="Prestige">
+        </a>
+      </div>
+      <div class="col-lg-2 col-sm-6 my-auto mx-auto">
+        <a href="http://anytimetrailer.com/" class="sponsor">
+          <img src="./images/sponsors/AnytimeTrailer.png" class="img-fluid" alt="Anytime Trailer">
+        </a>
+      </div>
+      <div class="col-lg-2 col-sm-6 my-auto mx-auto">
+        <a href="https://www.wissotalodge.com/" class="sponsor">
+          <img src="./images/sponsors/WissotaLodge.png" class="img-fluid" alt="Wissota Lodge">
         </a>
       </div>
     </div>
