--- a/schedule.html
+++ b/schedule.html
@@ -144,7 +144,7 @@
               <tr>
                 <th scope="row">The View</th>
                 <td></td>
-                <td>Raffle Prize drawing, tickets available for purchase until drawing begins, Fish contest winners announced after. Stick around for music and fish stories at the bar</td>
+                <td>Raffle Prize drawing, tickets available for purchase until drawing begins, Fish contest winners announced after.</td>
               </tr>
             </tbody>
           </table>
@@ -191,9 +191,21 @@
           <img src="./images/sponsors/megaholiday.png" class="img-fluid" alt="Mega Holiday">
         </a>
       </div>
+    </div>
+    <div class="row mx-6">
       <div class="col-lg-2 col-sm-6 my-auto mx-auto">
         <a href="http://www.prestigervauto.com/" class="sponsor">
           <img src="./images/sponsors/prestige1.png" class="img-fluid" alt="Prestige">
+        </a>
+      </div>
+      <div class="col-lg-2 col-sm-6 my-auto mx-auto">
+        <a href="http://anytimetrailer.com/" class="sponsor">
+          <img src="./images/sponsors/AnytimeTrailer.png" class="img-fluid" alt="Anytime Trailer">
+        </a>
+      </div>
+      <div class="col-lg-2 col-sm-6 my-auto mx-auto">
+        <a href="https://www.wissotalodge.com/" class="sponsor">
+          <img src="./images/sponsors/WissotaLodge.png" class="img-fluid" alt="Wissota Lodge">
         </a>
       </div>
     </div>
