--- a/sponsors.html
+++ b/sponsors.html
@@ -156,9 +156,21 @@
               <img src="./images/sponsors/megaholiday.png" class="img-fluid" alt="Mega Holiday">
             </a>
           </div>
+        </div>
+        <div class="row">
           <div class="col-2 text-center my-auto mx-auto">
             <a href="http://www.prestigervauto.com/" class="sponsors">
               <img src="./images/sponsors/prestige1.png" class="img-fluid" alt="Prestige">
+            </a>
+          </div>
+          <div class="col-2 text-center my-auto mx-auto">
+            <a href="http://anytimetrailer.com/" class="sponsors">
+              <img src="./images/sponsors/AnytimeTrailer.png" class="img-fluid" alt="Anytime Trailer">
+            </a>
+          </div>
+          <div class="col-2 text-center my-auto mx-auto">
+            <a href="https://www.wissotalodge.com/" class="sponsors">
+              <img src="./images/sponsors/WissotaLodge.png" class="img-fluid" alt="Wissota Lodge">
             </a>
           </div>
         </div>
