--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
               <li>The View on Lake Wissota</li>
               <li class="mb-3">The Edge Pub & Eatery</li>
               <li><h5><b>Prize Distribution</b></h5></li>
-              <li>Feb. 6th.</li>
+              <li>Feb. 6th</li>
               <!-- <li>The View on Lake Wissota starting at 3pm</li> -->
             </ul>
           </div>
@@ -242,7 +242,7 @@
         </div>
         <div class="row px-3 mb-5">
           <span>For contest rules and additional information, visit jigsup.org or contact UWEC recreation at (715)836-3377.</span>
-          <a href="assets/Flyer(email).pdf" target="_blank">Jig's Up Poster</a>
+          <a href="assets/poster2021.pdf" target="_blank">Jig's Up Poster</a>
         </div>
       </div>
       <div class="col-lg-6">
